<resources>
    <string name="app_name">poem2</string>
    <string name="button1">Button 1</string>
    <string name="button2">Azan</string>
    <string name="button3">Iqamat </string>
    <string name="button4">Button 4</string>
    <string name="button5">Button 5</string>
    <string name="button6">Button 6</string>
    <string name="button7">Button 7</string>
    <string name="button8">Button 8</string>
    <string name="button9">Button 90</string>
    <string name="button10">Button 10</string>
    <string name="button11">Button 11</string>
    <string name="button12">Button 12</string>
    <string name="button13">Button 13</string>
    <string name="button14">Button 14</string>
    <string name="button15">Button 15</string>
    <string name="button16">Button 16</string>
    <string name="button17">Button 17</string>
    <string name="button18">Button 18</string>
    <string name="button19">Button 19</string>
    <string name="button20">Button 20</string>
    <string name="button21">Button 21</string>
    <string name="button22">Button 22</string>
    <string name="button23">Button 23</string>
    <string name="button24">Button 24</string>
    <string name="button25">Button 25</string>
    <string name="button26">Button 26</string>
    <string name="button27">Button 27</string>
    <string name="button28">Button 28</string>
    <string name="button">Button</string>

    <string name="BonDona">
        বন্দনা \n শাহ মুহম্মদ সগীর
        \n
        প্রথমে প্রণাম করি এক করতার।
        যেই প্রভুর জীবদানে স্থাপিলা সংসার।।
        দ্বিতীয়ে প্রণাম কঁরো মাও বাপ পাত্র।
        যান দয়া হন্তে জন্ম হৈল বসুধায়।।
        পিঁপড়ার ভয়ে মাও না থুইলা মাটিতে।
        কোল দিয়া বুক দিয়া জগতে বিদিত।।
        অশক্য আছিলুঁ দুর্বল ছাবাল
        তান দয়া হন্তে হৈল এ ধড় বিশাল।।
        না খাই খাওয়াএ পিতা না পরি পরাএ।
        কত দুক্ষে একেএকে বছর গোঞাএ।।
        পিতাক নেহায় জিউ জীবন যৌবন।
        কনে না সুধিব তান ধারক কাহন।।
        ওস্তাদে প্রণাম করো পিতা হন্তে বাড়।
        দোসর-জনম দিলা তিঁহ সে অাহ্মার।।
        আহ্মা পুরাবাসী আছ জথ পৌরজন।
        ইস্ট মিত্র আদি জথ সভাসদগগণ।
        তান সভান পদে মোহার বহুল ভকতি।
        সপুটে প্রণাম মোহর মনোরথ গতি।।
        মুহম্মদ সগীর হীন বহোঁ পাপ ভার।
        সভানক পদে দোয়া মাগোঁ বার বার।\n\n
    </string>

    <string name="BonDona2">
        বন্দনা \nশাহ মুহম্মদ সগীর
        \n
        প্রথমে প্রণাম করি এক করতার।
        যেই প্রভুর জীবদানে স্থাপিলা সংসার।।
        দ্বিতীয়ে প্রণাম কঁরো মাও বাপ পাত্র।
        যান দয়া হন্তে জন্ম হৈল বসুধায়।।
        পিঁপড়ার ভয়ে মাও না থুইলা মাটিতে।
        কোল দিয়া বুক দিয়া জগতে বিদিত।।
        অশক্য আছিলুঁ দুর্বল ছাবাল
        তান দয়া হন্তে হৈল এ ধড় বিশাল।।
        না খাই খাওয়াএ পিতা না পরি পরাএ।
        কত দুক্ষে একেএকে বছর গোঞাএ।।
        পিতাক নেহায় জিউ জীবন যৌবন।
        কনে না সুধিব তান ধারক কাহন।।
        ওস্তাদে প্রণাম করো পিতা হন্তে বাড়।
        দোসর-জনম দিলা তিঁহ সে অাহ্মার।।
        আহ্মা পুরাবাসী আছ জথ পৌরজন।
        ইস্ট মিত্র আদি জথ সভাসদগগণ।
        তান সভান পদে মোহার বহুল ভকতি।
        সপুটে প্রণাম মোহর মনোরথ গতি।।
        মুহম্মদ সগীর হীন বহোঁ পাপ ভার।
        সভানক পদে দোয়া মাগোঁ বার বার।\n\n
    </string>
    <string name="open">Open</string>
    <string name="close">close</string>
    <string name="my_text">My_text</string>
    <string name="Ajan">
        আজান\n
        আল্লাহু আকবার \n
আল্লাহু আকবার \n
আল্লাহু আকবার \n
আল্লাহু আকবার \n
  অর্থ: আল্লাহ মহান।\n\n

আশহাদু-আল লা- ইলাহা ইল্লাল্লাহ \n
আশহাদু-আল লা- ইলাহা ইল্লাল্লাহ \n
 অর্থ: আমি সাক্ষ্য দিচ্ছি যে, আল্লাহ্ ছাড়া অন্য কোন মাবুদ নেই।\n\n

আশহাদু-আন্না মুহাম্মাদুর রাসুলুল্লাহ \n
আশহাদু-আন্না মুহাম্মাদুর রাসুলুল্লাহ \n
 অর্থ: আমি সাক্ষ্য দিচ্ছি যে, মুহাম্মদ (স) আল্লাহর প্রেরিত দূত।\n\n

হাইয়া আলাস সালা\n
হাইয়া আলাস সালা \n
 অর্থ: নামাজের জন্য এসো।\n\n

হাইয়া আলাল ফালা\n
হাইয়া আলাল ফালা\n
 অর্থ: সাফল্যের জন্য এসো।\n\n

( শুধুমাত্র ভোরের নামাযের সময়)\n
আস সলাতু খাইরুম মিনান নাউম \n
আস সলাতু খাইরুম মিনান নাউম\n
 অর্থ: ঘুম হতে নামাজ উত্তম। \n\n

আল্লাহু আকবার \n
আল্লাহু আকবার\n
  অর্থ: আল্লাহ মহান।\n\n

লা ইলাহা ইল্লাল্লাহ \n
 অর্থ: আল্লাহ্ ছাড়া অন্য কোন উপাস্য নেই।\n
    </string>
    <string name="Iqamat">
             ইকামত\n
আল্লাহু আকবার \n
আল্লাহু আকবার \n
আল্লাহু আকবার \n
আল্লাহু আকবার \n
  অর্থ: আল্লাহ মহান।\n\n

আশহাদু-আল লা- ইলাহা ইল্লাল্লাহ \n
আশহাদু-আল লা- ইলাহা ইল্লাল্লাহ \n
 অর্থ: আমি সাক্ষ্য দিচ্ছি যে, আল্লাহ্ ছাড়া অন্য কোন মাবুদ নেই।\n\n

আশহাদু-আন্না মুহাম্মাদুর রাসুলুল্লাহ \n
আশহাদু-আন্না মুহাম্মাদুর রাসুলুল্লাহ \n
 অর্থ: আমি সাক্ষ্য দিচ্ছি যে, মুহাম্মদ (স) আল্লাহর প্রেরিত দূত।\n\n

হাইয়া আলাস সালা\n
হাইয়া আলাস সালা \n
 অর্থ: নামাজের জন্য এসো।\n\n

হাইয়া আলাল ফালা\n
হাইয়া আলাল ফালা\n
 অর্থ: সাফল্যের জন্য এসো।\n\n

ক্বদ ক্বামাতিস্‌ সালাহ\n
ক্বদ ক্বামাতিস্‌ সালাহ\n
 অর্থ:নামাজ আরম্ভ হলো\n\n

আল্লাহু আকবার \n
আল্লাহু আকবার\n
  অর্থ: আল্লাহ মহান।\n\n

লা ইলাহা ইল্লাল্লাহ \n
 অর্থ: আল্লাহ্ ছাড়া অন্য কোন উপাস্য নেই।\n
    </string>
</resources>