<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="#13817E"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button1"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="100dp"
                        android:text="@string/button"
                        android:textAllCaps="false"
                        android:textSize="@dimen/text_size"
                         />

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="100dp"
                        android:text="@string/button2"
                        android:textAllCaps="false"
                        android:textSize="@dimen/text_size"
                        />

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="100dp"
                        android:text="@string/button3"
                        android:textAllCaps="false"
                        android:textSize="@dimen/text_size"
                        />
                    <Button
                        android:id="@+id/button4"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="100dp"
                        android:text="@string/button"
                        android:textAllCaps="false"
                        android:textSize="@dimen/text_size"
                        />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <Button
                        android:id="@+id/button5"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="100dp"
                        android:text="@string/button5"
                        android:textAllCaps="false"
                        android:textSize="@dimen/text_size"
                        />

                    <Button
                        android:id="@+id/button6"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="100dp"
                        android:text="@string/button6"
                        android:textAllCaps="false"
                        android:textSize="@dimen/text_size"
                        />

                    <Button
                        android:id="@+id/button7"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="100dp"
                        android:text="@string/button7"
                        android:textAllCaps="false"
                        android:textSize="@dimen/text_size"
                        />

                    <Button
                        android:id="@+id/button8"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="100dp"
                        android:text="@string/button8"
                        android:textAllCaps="false"
                        android:textSize="@dimen/text_size"
                        />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <Button
                        android:id="@+id/button9"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="100dp"
                        android:text="@string/button9"
                        android:textAllCaps="false"
                        android:textSize="@dimen/text_size"/>

                    <Button
                        android:id="@+id/button10"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="100dp"
                        android:text="@string/button10"
                        android:textAllCaps="false"
                        android:textSize="@dimen/text_size" />

                    <Button
                        android:id="@+id/button11"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="100dp"
                        android:text="@string/button11"
                        android:textAllCaps="false"
                        android:textSize="@dimen/text_size" />

                    <Button
                        android:id="@+id/button12"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="100dp"
                        android:text="@string/button12"
                        android:textAllCaps="false"
                        android:textSize="@dimen/text_size"
                        />



                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button13"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="100dp"
                        android:text="@string/button13"
                        android:textAllCaps="false"
                        android:textSize="@dimen/text_size" />

                    <Button
                        android:id="@+id/button14"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="100dp"
                        android:text="@string/button14"
                        android:textAllCaps="false"
                        android:textSize="@dimen/text_size"
                        />

                    <Button
                        android:id="@+id/button15"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="100dp"
                        android:text="@string/button15"
                        android:textAllCaps="false"
                        android:textSize="@dimen/text_size" />
                    <Button
                        android:id="@+id/button16"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="100dp"
                        android:text="@string/button16"
                        android:textAllCaps="false"
                        android:textSize="@dimen/text_size"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">



                    <Button
                        android:id="@+id/button17"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="100dp"
                        android:text="@string/button17"
                        android:textAllCaps="false"
                        android:textSize="@dimen/text_size" />
                    <Button
                        android:id="@+id/button18"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="100dp"
                        android:text="@string/button18"
                        android:textAllCaps="false"
                        android:textSize="@dimen/text_size" />
                    <Button
                        android:id="@+id/button19"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="100dp"
                        android:text="@string/button19"
                        android:textAllCaps="false"
                        android:textSize="@dimen/text_size" />
                    <Button
                        android:id="@+id/button20"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="100dp"
                        android:text="@string/button20"
                        android:textAllCaps="false"
                        android:textSize="@dimen/text_size" />


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">



                    <Button
                        android:id="@+id/button21"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="100dp"
                        android:text="@string/button21"
                        android:textAllCaps="false"
                        android:textSize="@dimen/text_size" />
                    <Button
                        android:id="@+id/button22"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="100dp"
                        android:text="@string/button22"
                        android:textAllCaps="false"
                        android:textSize="@dimen/text_size" />
                    <Button
                        android:id="@+id/button23"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="100dp"
                        android:text="@string/button23"
                        android:textAllCaps="false"
                        android:textSize="@dimen/text_size" />
                    <Button
                        android:id="@+id/button24"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="100dp"
                        android:text="@string/button24"
                        android:textAllCaps="false"
                        android:textSize="@dimen/text_size" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">



                    <Button
                        android:id="@+id/button25"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="100dp"
                        android:text="@string/button25"
                        android:textAllCaps="false"
                        android:textSize="@dimen/text_size" />
                    <Button
                        android:id="@+id/button26"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="100dp"
                        android:text="@string/button26"
                        android:textAllCaps="false"
                        android:textSize="@dimen/text_size" />
                    <Button
                        android:id="@+id/button27"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="100dp"
                        android:text="@string/button27"
                        android:textAllCaps="false"
                        android:textSize="@dimen/text_size" />
                    <Button
                        android:id="@+id/button28"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="100dp"
                        android:text="@string/button28"
                        android:textAllCaps="false"
                        android:textSize="@dimen/text_size" />


                </LinearLayout>


            </LinearLayout>




        </ScrollView>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:menu="@menu/nav_menu"
            android:fitsSystemWindows="true" />




    </androidx.drawerlayout.widget.DrawerLayout>
</layout>